--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <div id='list-counters'></div>
     <h1>List of counters fancy</h1>
     <div id='list-counters-fancy'></div>
-    <script src="/static/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
